--- a/help.html
+++ b/help.html
@@ -33,7 +33,7 @@
         <div class="nav-network"></div>
         <div class="nav-logo">
             <h1>AI+ 结构化学习平台</h1>
-            <a href="https://github.com/FireflJay/test5" class="github-icon" target="_blank">
+            <a href="https://github.com/FireflJay/AI_Study_Templatee" class="github-icon" target="_blank">
                 <img src="./images/github-mark.png" alt="GitHub" class="default-icon">
                 <img src="./images/github-mark-white.png" alt="GitHub" class="hover-icon">
             </a>
