--- a/AI_ToolsMatrix/Template_TM.html
+++ b/AI_ToolsMatrix/Template_TM.html
@@ -25,9 +25,28 @@
     <!-- <link rel="stylesheet" href="./styles/main.css"> -->
      <!-- <link rel="stylesheet" href="./styles/test.css" -->
 
+     <!-- 添加星空效果的样式 -->
+      <link rel="preconnet" href="../styles/stars.css">
+
+      <!-- 引入 AOS 动画库 -->
+
+<!-- 添加部分main.css的样式，确保背景一致 -->
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, var(--bg-primary), var(--bg-secondary));
+            color: #fff;
+            min-height: 100vh;
+            overflow-x: hidden;
+        }
+    </style>
+
 </head>
 
 <body>
+    <!-- 创建星星容器 -->
+    <div id="starsContainer" class="stars-container"></div>
     <!-- 全局导航 -->
     <nav id="homehelp" class="main-nav">
         <div class="nav-network"></div>
@@ -382,7 +401,7 @@
 
                  <!-- 三、底部 -->
                  <li class="has-children">
-                    <a href="index.html#chat-section">
+                    <a href="../index.html#chat-section" target="_blank">
                         <svg class="nav-item-icon" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M12,3C7.58,3 4,4.79 4,7C4,9.21 7.58,11 12,11C16.42,11 20,9.21 20,7C20,4.79 16.42,3 12,3M4,9V12C4,14.21 7.58,16 12,16C16.42,16 20,14.21 20,12V9C20,11.21 16.42,13 12,13C7.58,13 4,11.21 4,9M4,14V17C4,19.21 7.58,21 12,21C16.42,21 20,19.21 20,17V14C20,16.21 16.42,18 12,18C7.58,18 4,16.21 4,14Z"/>
                         </svg>
@@ -402,12 +421,12 @@
             </ul>
              <!-- 侧边栏召唤AI客服测试 -->
              <div class="ai-service-container">
-                <a href="#" id="summonAIService" class="ai-service-link nav-top-parent">
+                <!-- <a href="#" id="summonAIService" class="ai-service-link nav-top-parent">
                     <svg class="nav-item-icon" viewBox="0 0 24 24">
                         <path fill="currentColor" d="M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2M18,13H13V18H11V13H6V11H11V6H13V11H18V13Z"/>
                     </svg>
                     召唤AI客服
-                </a>
+                </a> -->
             </div>
         </div>
     </nav>
@@ -424,7 +443,7 @@
 
             <aside class="resources">
                 <!-- <section> -->
-                <h3>内容模块1</h3>
+                <h3>————————   内容模块1   ————————</h3>
             </aside>
 
             <!-- 内容区块 -->
@@ -458,7 +477,7 @@
             <aside class="resources">
                 <!-- <section> -->
                     <br>
-                <h3>拓展内容</h3>
+                <h3>———————— 拓展内容 ————————</h3>
                 <div class="resource-cards">
                     <!-- 资源卡片 -->
                 </div>
@@ -512,5 +531,8 @@
         });
     </script>
 
+
+    <!-- 添加星星。js -->
+     <script src="../js/modules/stars.js"></script>
 </body>
 </html> 
